# python-comtrade

./: .gitignore  LICENSE.md  README.md  comtrade.py  pyproject.toml  tests.py
.github/workflows/: sphinx-build.yml  test.yml  unittest.yml
docsource/: channels.rst  comtrade.rst  conf.py  index.rst  sphinxrequires.txt  support.rst
sample_files/: sample_ascii.cfg  sample_bin.cfg
source/: datreaders.rst  index.rst  sphinxrequires.txt
tests/: tests.py
tests/sample_files/: sample_ascii.cff  sample_ascii.cfg  sample_ascii_utf-8.cfg  sample_float32.cff  sample_iso8859-1.cfg  sample_iso8859-1_bin.cfg  sample_sub_char.cfg
